--- a/css/style.css
+++ b/css/style.css
@@ -769,7 +769,7 @@ a {
 }
 
 .advantages {
-  background-image: url(../img/waffles-background.svg);
+  background-image: url(../img/waffles-background.png);
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
